Add Manager Page

--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
       <div class="main">
 
         <div class="tab-content">
-          <div role="tabpanel" class="tab-pane fade" id="Profile">
+          <div role="tabpanel" class="tab-pane fade in active" id="Profile">
             <h1 class="page-header">Restaurant Online Profile</h1>
             <div class="row">
               <form class="form-horizontal col-xs-4" role="form">
@@ -379,7 +379,7 @@
           </div><!-- Rooms -->
           
 
-          <div role="tabpanel" class="tab-pane fade in active" id="RoomsEdit">
+          <div role="tabpanel" class="tab-pane fade" id="RoomsEdit">
             <div class="row">
               <div class="col-sm-8">
                 <ul class="list-inline">
