Add Total bellow table Fixes #3

--- a/analytics.html
+++ b/analytics.html
@@ -450,10 +450,9 @@
                   
                     <td><span>0</span></td>
                   </tr>
-                  <tr>
+                  <tr class="Total">
                     <td class="bdr">
-                      <a href="#">Lunch</a>
-                      <span class="date">2014-08-03</span>
+                      Total
                     </td>
                   
                     <td>
