Fix responsiveness of Text Input Box Fixes #6

--- a/profile.html
+++ b/profile.html
@@ -88,7 +88,7 @@
           <div role="tabpanel" class="tab-pane fade in active" id="Profile">
             <h1 class="page-header">Restaurant Online Profile</h1>
             <div class="row">
-              <form class="form-horizontal col-xs-4" role="form">
+              <form class="form-horizontal col-lg-5" role="form">
                 <div class="form-group">
                   <label for="restaurent_name" class="col-sm-5 control-label">Restaurant Name:</label>
                   <div class="col-sm-7">
