Fix some issues

--- a/login.html
+++ b/login.html
@@ -32,8 +32,9 @@
     <div class="container">
 
       <form class="form-signin" role="form" action="analytics.html">
-        <div class="text-center">
-          <img id="logo" src="img/logo-login.png" alt="">
+        <div id="logo" class="text-center">
+          <img src="img/logo-login.png" alt="">
+          <p>restaurent reservations made easy</p>
         </div>
         <input type="text" class="form-control" placeholder="Username" required="" autofocus="">
         <input type="password" class="form-control" placeholder="Password" required="">
