--- a/manager.html
+++ b/manager.html
@@ -90,11 +90,12 @@
             <section class="payment-plan">
               <div class="row">
                 <div class="col-sm-8">
-                  <h3>Subscription includes access to the iPad app, restaurant listing via eatapp.co, and the Eat management dashboard.</h3>
+                  <h2 class="sub-header">Subscription includes access to the iPad app, restaurant listing via eatapp.co, and the Eat management dashboard.</h2>
                 </div>
                 <div class="col-sm-4 text-right">
-                  <h4><strong>Payment Plan $109 / month</strong></h4>
-                  <h4>$99 Eat Monthly + $9 Analytics</h4>
+                  <h3 class="sub-header">
+                    <strong>Payment Plan $109 / month</strong><br>$99 Eat Monthly + $9 Analytics
+                  </h3>
                 </div>
               </div>
             
