Left and right button changes date #9

--- a/analytics.html
+++ b/analytics.html
@@ -89,9 +89,9 @@
             <h1 class="page-header">Overview of Your Restaurant</h1>
             <section class="the-date">
               <ul class="list-inline">
-                <li><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
-                <li>Friday, June 3, 2014</li>
-                <li><a href="#"><i class="fa fa-angle-double-right"></i></a></li>
+                <li><a class="yesterday" href="#"><i class="fa fa-angle-double-left"></i></a></li>
+                <li class="current-date">Tuesday, June 3, 2014</li>
+                <li><a class="tomorrow" href="#"><i class="fa fa-angle-double-right"></i></a></li>
               </ul>
             </section>
 
