Profile > Hours List Bug Fixes #12

--- a/profile.html
+++ b/profile.html
@@ -364,6 +364,59 @@
                       <a href="#" class="delete-btn">-</a>
                     </td>
                   </tr>
+                  <tr class="demo">
+                    <td>
+                      <p>Shift Type</p>
+                      <select class="form-control">
+                        <option value="Lunch">Lunch</option>
+                        <option value="Lunch">Lunch</option>
+                        <option value="Lunch">Lunch</option>
+                        <option value="Lunch">Lunch</option>
+                        <option value="Lunch">Lunch</option>
+                      </select>
+                    </td>
+                    <td>
+                      <p>Days of the Week</p>
+                      <div class="choose-week">
+                        <ul class="pagination">
+                          <li><a href="#">Mon</a></li>
+                          <li><a href="#">Tue</a></li>
+                          <li><a href="#">Wed</a></li>
+                          <li><a href="#">Thu</a></li>
+                          <li><a href="#">Fri</a></li>
+                          <li><a href="#">Sat</a></li>
+                          <li><a href="#">Sun</a></li>
+                        </ul>
+                      </div>
+                    </td>
+                    <td>
+                      <div class="row">
+                        <div class="col-xs-6">
+                          <p>First Seating</p>
+                          <select class="form-control">
+                            <option value="6:00Pm">6:00Pm</option>
+                            <option value="6:00Pm">6:00Pm</option>
+                            <option value="6:00Pm">6:00Pm</option>
+                            <option value="6:00Pm">6:00Pm</option>
+                            <option value="6:00Pm">6:00Pm</option>
+                          </select>
+                        </div>
+                        <div class="col-xs-6">
+                          <p>Last Seating</p>
+                          <select class="form-control">
+                            <option value="11:45Pm">11:45Pm</option>
+                            <option value="11:45Pm">11:45Pm</option>
+                            <option value="11:45Pm">11:45Pm</option>
+                            <option value="11:45Pm">11:45Pm</option>
+                            <option value="11:45Pm">11:45Pm</option>
+                          </select>
+                        </div>
+                      </div>
+                    </td>
+                    <td>
+                      <a href="#" class="delete-btn">-</a>
+                    </td>
+                  </tr>
                 </tbody>
 
               </table>
