Landing broken on Profile Tab Fixes #14

--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
       <div class="main">
 
         <div class="tab-content">
-          <div role="tabpanel" class="tab-pane fade" id="Profile">
+          <div role="tabpanel" class="tab-pane fade in active" id="Profile">
             <h1 class="page-header">Restaurant Online Profile</h1>
             <div class="row">
               <form class="form-horizontal col-lg-5" role="form">
@@ -188,7 +188,7 @@
           </div><!-- Profile -->
 
 
-          <div role="tabpanel" class="tab-pane fade in active" id="Hours">
+          <div role="tabpanel" class="tab-pane fade" id="Hours">
             <h1 class="page-header">Business Hours</h1>
             <a href="#" id="add-shift" class="btn btn-success btn-lg pull-right">Add Shift</a>
             <div class="clearfix"></div>
