--- a/profile.html
+++ b/profile.html
@@ -79,7 +79,6 @@
               <span class="text-center">Logout</span>
             </a>
           </li>
-
         </ul>
       </div>
       <div class="main">
@@ -90,7 +89,7 @@
             <div class="row">
               <form class="form-horizontal col-lg-5" role="form">
                 <div class="form-group">
-                  <label for="profile_photo" class="col-sm-5 control-label">Profile Photo:</label>
+                  <label for="profile_photo" class="col-sm-3 col-lg-5 control-label">Profile Photo:</label>
                   <div class="col-sm-7">
                     <div class="thumb">
                       <img src="img/img-02.jpg" alt="">
@@ -99,14 +98,14 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="restaurent_name" class="col-sm-5 control-label">Restaurant Name:</label>
+                  <label for="restaurent_name" class="col-sm-3 col-lg-5 control-label">Restaurant Name:</label>
                   <div class="col-sm-7">
                     <input type="text" class="form-control" id="restaurent_name">
                   </div>
                 </div>
 
                 <div class="form-group">
-                  <label for="cuisine" class="col-sm-5 control-label">Cuisine:</label>
+                  <label for="cuisine" class="col-sm-3 col-lg-5 control-label">Cuisine:</label>
                   <div class="col-sm-7">
                     <select name="cuisine" id="cuisine" class="form-control">
                       <option value="Steakhouse">Steakhouse</option>
@@ -118,7 +117,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="neighborhood" class="col-sm-5 control-label">Neighborhood:</label>
+                  <label for="neighborhood" class="col-sm-3 col-lg-5 control-label">Neighborhood:</label>
                   <div class="col-sm-7">
                     <select name="neighborhood" id="neighborhood" class="form-control">
                       <option value="Adliya">Adliya</option>
@@ -130,7 +129,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="price" class="col-sm-5 control-label">Price:</label>
+                  <label for="price" class="col-sm-3 col-lg-5 control-label">Price:</label>
                   <div class="col-sm-7">
                     <select name="price" id="price" class="form-control">
                       <option value="$$$">$$$</option>
@@ -142,31 +141,31 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="description" class="col-sm-5 control-label">Description:</label>
+                  <label for="description" class="col-sm-3 col-lg-5 control-label">Description:</label>
                   <div class="col-sm-7">
                     <textarea name="description" id="description" class="form-control" rows="5"></textarea>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="phone_number" class="col-sm-5 control-label">Phone Number:</label>
+                  <label for="phone_number" class="col-sm-3 col-lg-5 control-label">Phone Number:</label>
                   <div class="col-sm-7">
                     <input type="text" class="form-control" id="phone_number">
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="address" class="col-sm-5 control-label">Address:</label>
+                  <label for="address" class="col-sm-3 col-lg-5 control-label">Address:</label>
                   <div class="col-sm-7">
                     <input type="text" class="form-control" id="address">
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="city" class="col-sm-5 control-label">City:</label>
+                  <label for="city" class="col-sm-3 col-lg-5 control-label">City:</label>
                   <div class="col-sm-7">
                     <input type="text" class="form-control" id="city">
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="country" class="col-sm-5 control-label">Country:</label>
+                  <label for="country" class="col-sm-3 col-lg-5 control-label">Country:</label>
                   <div class="col-sm-7">
                     <select name="country" id="country" class="form-control">
                       <option value="Country">Country</option>
