--- a/profile.html
+++ b/profile.html
@@ -484,6 +484,12 @@
           
 
           <div role="tabpanel" class="tab-pane fade" id="RoomsEdit">
+
+            <div class="pull-left">
+              <ul class="list-inline">
+                <li><a href="#" class="btn btn-danger btn-lg">Delete</a></li>
+              </ul>
+            </div>
             <div class="pull-right">
               <ul class="list-inline">
                 <li><a href="#" class="btn btn-default btn-lg">Cancel</a></li>
